--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/EJERCICOS DE CLASE/ARREGLOS.vb
+/EJERCICOS DE CLASE/ARREGLOS.resx
+/EJERCICOS DE CLASE/ARREGLOS.Designer.vb
