--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,5 @@ MigrationBackup/
 /EJERCICOS DE CLASE/ARREGLOS.vb
 /EJERCICOS DE CLASE/ARREGLOS.resx
 /EJERCICOS DE CLASE/ARREGLOS.Designer.vb
+/TAREAS ENTORNOS
+/EJERCICOS DE CLASE/Resources
