--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,7 @@ MigrationBackup/
 /EJERCICOS DE CLASE/ARREGLOS.Designer.vb
 /TAREAS ENTORNOS
 /EJERCICOS DE CLASE/Resources
+/PRACTICAS/Resources
+/PRACTICAS/PRACTICAS.sln
+/PRACTICAS/PRACTICAS.vbproj
+/PRACTICAS
