--- a/EJERCICOS DE CLASE/EJERCICOS DE CLASE.vbproj
+++ b/EJERCICOS DE CLASE/EJERCICOS DE CLASE.vbproj
@@ -87,6 +87,7 @@
       <SubType>Form</SubType>
       <Link>ARREGLOSCLASE.vb</Link>
     </Compile>
+    <Compile Include="conexion.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +99,10 @@
       <DependentUpon>FrmEmpleados.vb</DependentUpon>
     </Compile>
     <Compile Include="FrmEmpleados.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmEstudiante.Designer.vb" />
+    <Compile Include="frmEstudiante.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmMenu.Designer.vb">
@@ -140,6 +145,7 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmEstudiante.resx" />
     <EmbeddedResource Include="FrmMenu.resx">
       <DependentUpon>FrmMenu.vb</DependentUpon>
     </EmbeddedResource>
