--- a/EJERCICOS DE CLASE/EJERCICOS DE CLASE.vbproj
+++ b/EJERCICOS DE CLASE/EJERCICOS DE CLASE.vbproj
@@ -96,9 +96,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmArreglosVectores.Designer.vb" />
-    <Compile Include="frmArreglosVectores.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="FrmEmpleados.Designer.vb">
       <DependentUpon>FrmEmpleados.vb</DependentUpon>
     </Compile>
@@ -127,6 +124,7 @@
     <Compile Include="FrmProductos.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -190,6 +188,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\imagen.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="scriptienda.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
